1-es-cluster-set-up/es-cluster-set-up-template-new-vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  Amazon ElasticSearch cluster set-up

  SAM Template for creating a new Amazon ElasticSearch cluster in a new VPC with the given instance sizes and nodes.

Parameters:
  DomainName:
    Description: The Elasticsearch Domain name
    Type: String
    Default: elasticsearch-domain-xyz

  VPCCIDR:
    Description: The VPC CIDR address range for the VPC we will create.
    Type: String
    Default: 10.11.12.0/24

  PublicSubnet1CIDR:
    Description: The public subnet 1 CIDR address range.
    Type: String
    Default: 10.11.12.0/28

  PublicSubnet2CIDR:
    Description: The public subnet 2 CIDR address range.
    Type: String
    Default: 10.11.12.16/28

  ElasticsearchVersion:
    Description: The Elasticsearch Version
    Type: String
    Default: 7.1
    AllowedValues: 
      - 7.1
      - 6.8
      - 5.6
      - 2.3
      - 1.5
  
  InstanceType:
    Description: The data instance type
    Type: String
    Default: m5.large.elasticsearch
    AllowedValues: 
      - c5.large.elasticsearch
      - c5.xlarge.elasticsearch
      - c5.2xlarge.elasticsearch
      - c5.4xlarge.elasticsearch
      - c5.9xlarge.elasticsearch
      - c5.18xlarge.elasticsearch
      - i3.large.elasticsearch
      - i3.xlarge.elasticsearch
      - i3.2xlarge.elasticsearch
      - i3.4xlarge.elasticsearch
      - i3.8xlarge.elasticsearch
      - i3.16xlarge.elasticsearch
      - m5.large.elasticsearch
      - m5.xlarge.elasticsearch
      - m5.2xlarge.elasticsearch
      - m5.4xlarge.elasticsearch
      - m5.12xlarge.elasticsearch
      - r5.large.elasticsearch
      - r5.xlarge.elasticsearch
      - r5.2xlarge.elasticsearch
      - r5.4xlarge.elasticsearch
      - r5.12xlarge.elasticsearch
      - t2.small.elasticsearch
      - t2.medium.elasticsearch

  InstanceCount:
    Type: String
    Default: 2

  DedicatedMasterInstanceType:
    Description: The dedicated master instance type
    Type: String
    Default: m5.large.elasticsearch
    AllowedValues: 
      - c5.large.elasticsearch
      - c5.xlarge.elasticsearch
      - c5.2xlarge.elasticsearch
      - c5.4xlarge.elasticsearch
      - c5.9xlarge.elasticsearch
      - c5.18xlarge.elasticsearch
      - i3.large.elasticsearch
      - i3.xlarge.elasticsearch
      - i3.2xlarge.elasticsearch
      - i3.4xlarge.elasticsearch
      - i3.8xlarge.elasticsearch
      - i3.16xlarge.elasticsearch
      - m5.large.elasticsearch
      - m5.xlarge.elasticsearch
      - m5.2xlarge.elasticsearch
      - m5.4xlarge.elasticsearch
      - m5.12xlarge.elasticsearch
      - r5.large.elasticsearch
      - r5.xlarge.elasticsearch
      - r5.2xlarge.elasticsearch
      - r5.4xlarge.elasticsearch
      - r5.12xlarge.elasticsearch
      - t2.small.elasticsearch
      - t2.medium.elasticsearch

  DedicatedMasterInstanceCount:
    Type: String
    Default: 3
    AllowedValues: 
      - 3
      - 5

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}:VPC"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}:InternetGateway"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}:RouteTable"

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}:PublicSubnet1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}:PublicSubnet2"

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Limits security group ingress and egress traffic for the ES cluster
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443

  # to run a 3 AZ cluster: https://github.com/aws-cloudformation/aws-cloudformation-coverage-roadmap/issues/8
  ElasticsearchDomain:
    Type: AWS::Elasticsearch::Domain # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html
    Properties:
      DomainName: !Ref DomainName
      ElasticsearchVersion: !Ref ElasticsearchVersion
      NodeToNodeEncryptionOptions: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-nodetonodeencryptionoptions.html
        Enabled: true
      EncryptionAtRestOptions: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-encryptionatrestoptions.html
        Enabled: true
      ElasticsearchClusterConfig: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html
        DedicatedMasterEnabled: true
        ZoneAwarenessEnabled: true
        InstanceCount: !Ref InstanceCount
        InstanceType: !Ref InstanceType
        DedicatedMasterType: !Ref DedicatedMasterInstanceType
        DedicatedMasterCount: !Ref DedicatedMasterInstanceCount
      EBSOptions: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-ebsoptions.html
        EBSEnabled: true
        Iops: 0
        VolumeSize: 10
        VolumeType: gp2
      SnapshotOptions: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-snapshotoptions.html
        AutomatedSnapshotStartHour: 0
      AccessPolicies:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS: '*'
            Action: 'es:*'
            Resource: !Sub 'arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/${DomainName}/*'
      AdvancedOptions: # https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/es-createupdatedomains.html#es-createdomain-configure-advanced-options
        rest.action.multi.allow_explicit_index: 'true'
      VPCOptions: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-vpcoptions.html
        SecurityGroupIds:
          - !Ref SecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
          - !Ref PublicSubnet2
      Tags: # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-resource-tags.html
      - Key: Name
        Value: !Sub "${AWS::StackName}:ElasticsearchDomain"

  ElasticsearchDomainEndpoint:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /DEV/ES-WORKSHOP/ES-CLUSTER-ENDPOINT
      Type: String
      Value: !Sub "https://${ElasticsearchDomain.DomainEndpoint}"
      Tags:
        "Environment": "DEV"

Outputs:
  DomainArn:
    Value: !GetAtt ElasticsearchDomain.DomainArn
  DomainEndpoint:
    Value: !Sub "https://${ElasticsearchDomain.DomainEndpoint}"
